created the CSS and JS files

--- a/index.html
+++ b/index.html
@@ -2,19 +2,13 @@
 <html>
 <head>
   <title>Weather App</title>
-  <style>
-    h1{
-      text-align: center;
-      margin-top: 100px;
-      font-size: 50px;
-      color: rgb(33, 88, 43);
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+ 
 </head>
 <body>
   <h1>Hello Git</h1>
   
-  <!-- Your weather app content goes here -->
+<script src="script.js"></script>
   
 </body>
 </html>
