added URL references

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/L00ptyl00p" target="_blank">Lupe</a> and is
+          <a href="https://github.com/L00ptyl00p/weather-app" target="_blank"> on GitHub</a> and
+          <a href="https://fascinating-rugelach-459234.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
