--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
           <div class="current-temperature">
             <span class="current-temperature-icon">
-              <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png";/>
+              <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" class="icon"/>
               </span
             ><span class="current-temperature-value" id="current-temperature"
               >24</span
