--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>My weather application</title>
   </head>
   <body>
+    <img src="images/purplestars.jpg"/>
     <div class="weather-app">
       <header>
         <form id="search-form">
@@ -39,9 +40,9 @@
             </p>
           </div>
           <div class="current-temperature">
-            <span class="current-temperature-icon">  </span
+            <span class="current-temperature-icon">  
               <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" class="icon">
-              
+              </span
             ><span class="current-temperature-value" id="current-temperature"
               >24</span
             ><span class="current-temperature-unit">°F</span>
