--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>My weather application</title>
   </head>
   <body>
-    <img src="images/purplestars.jpg"/>
+    <img src="images/purplesky.jpg"/>
     <div class="weather-app">
       <header>
         <form id="search-form">
