--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <title>My weather application</title>
   </head>
   <body>
-    <img src="images/purplesky.jpg"/>
+
+    <div class="body-image">
+    <img src="purplesky.jpg" />
+    </div>
+
     <div class="weather-app">
       <header>
         <form id="search-form">
