--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </p>
           </div>
           <div class="current-temperature">
-            <span class="current-temperature-icon">  
+            <span class="icon">  
               <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" class="icon">
               </span
             ><span class="current-temperature-value" id="current-temperature"
