--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
           <div class="current-temperature">
             <span class="icon">  
-              <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" class="icon">
+              <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" >
               </span
             ><span class="current-temperature-value" id="current-temperature"
               >24</span
