--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
             </p>
           </div>
           <div class="current-temperature">
-            <span class="icon">  
-              <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" >
-              </span
+            
+              <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
+              class="icon">
+              
             ><span class="current-temperature-value" id="current-temperature"
               >24</span
             ><span class="current-temperature-unit">°F</span>
