--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
               class="icon">
               
-            ><span class="current-temperature-value" id="current-temperature">
+            <span class="current-temperature-value" id="current-temperature">
               24 </span
             ><span class="current-temperature-unit">°F</span>
           </div>
