--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
               <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png" 
               class="icon">
               
-            <span class="current-temperature-value" id="current-temperature">
-              24 </span
-            ><span class="current-temperature-unit">°F</span>
+            <div class="current-temperature-value" id="current-temperature">
+              24 </div
+            ><div class="current-temperature-unit">°F</div>
           </div>
         </div>
       </main>
