--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
           
             <div class="current-temperature">
-              <span class="current-temperature-icon">☀️</span
+              <span class="current-temperature-icon"></span
               >
               <span class="current-temperature-value" id="current-temperature"
               >24</span>
