--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="weather-app-temperature-container">
             <div id="icon"></div>
             <div class="weather-app-temperature" id="temperature"></div>
-            <div class="weatehr-app-unit">°C</div>
+            <div class="weatehr-app-unit">°F</div>
           </div>
         </div>
            
