--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         <div class="current-weather">
           <div>
-            <h1 class="current-city" id="current-city">Paris</h1>
+            <h1 class="current-city" id="current-city"></h1>
             <p class="current-details">
               <span id="current-date"></span>,<br />
               Humidity: <strong id="humidity"></strong>, Wind:
